...
            <point key="canvasLocation" x="2399" y="460"/>
        </scene>
        <!--Score-->
        <scene sceneID="Qra-41-jp1">
            <objects>
                <navigationController title="Score" id="ZKJ-4x-VF2" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="1" title="Scores" image="score" id="mjZ-3u-Tj3"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ws6-Yc-bBH">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="69u-FY-n1s" kind="relationship" relationship="rootViewController" id="yxy-Rq-Vax"/>
...
